feat: Moved episodes and added unified Lua script.
- Moved the episodes into a dedicated folder and files
- Wrote a single Lua script and Nginx configuration for all shows
- Updated README.md

--- a/static/index.html
+++ b/static/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <html>
-  <title>Random Episode</title>
-  </head>
-  <body>
-    <ul>
-      <li>
-        <a href="/netflix/random">Random on Netflix</a>
-        <ul>
-          <li><a href="/netflix/seinfeld">Seinfeld</a></li>
-          <li><a href="/netflix/strangerthings">Stranger Things</a></li>
-          <li><a href="/netflix/breakingbad">Breaking Bad</a></li>
-          <li><a href="/netflix/bettercallsaul">Better Call Saul</a></li>
-          <li><a href="/netflix/greysanatomy">Grey's Anatomy</a></li>
-        </ul>
-      </li>
-    </ul>
-  </body>
+<title>Random Episode</title>
+</head>
+
+<body>
+  <h2>Random on Netflix</h2>
+  <ul>
+    <li><a href="/random/netflix/seinfeld">Seinfeld</a></li>
+    <li><a href="/random/netflix/strangerthings">Stranger Things</a></li>
+    <li><a href="/random/netflix/breakingbad">Breaking Bad</a></li>
+    <li><a href="/random/netflix/bettercallsaul">Better Call Saul</a></li>
+    <li><a href="/random/netflix/greysanatomy">Grey's Anatomy</a></li>
+  </ul>
+</body>
+
 </html>
