--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,7 @@
     <li><a href="/random/netflix/breakingbad">Breaking Bad</a></li>
     <li><a href="/random/netflix/bettercallsaul">Better Call Saul</a></li>
     <li><a href="/random/netflix/greysanatomy">Grey's Anatomy</a></li>
+    <li><a href="/random/netflix/janethevirgin">Jane the Virgin</a></li>
   </ul>
 </body>
 
