feat: Add Ozark show

--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,7 @@
     <li><a href="/random/netflix/strangerthings">Stranger Things</a></li>
     <li><a href="/random/netflix/breakingbad">Breaking Bad</a></li>
     <li><a href="/random/netflix/bettercallsaul">Better Call Saul</a></li>
+    <li><a href="/random/netflix/ozark">Ozark</a></li>
     <li><a href="/random/netflix/greysanatomy">Grey's Anatomy</a></li>
     <li><a href="/random/netflix/janethevirgin">Jane the Virgin</a></li>
   </ul>
