2: New and revised front page

--- a/static/index.html
+++ b/static/index.html
@@ -1,20 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
-<html>
-<title>Random Episode</title>
-</head>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Random Episode</title>
+    <link rel="stylesheet" type="text/css" href="index.css" /> 
+  </head>
+  <body>
+    <div class="service">
+      <h2>Random on Netflix</h2>
+      <div class="show-list">
+        <a class="show" href="/random/netflix/seinfeld">
+          <img src="images/seinfeld.jpeg" alt="Seinfeld Show Poster" class="show-image">
+          <p class="show-title">Seinfeld</p>
+        </a>
 
-<body>
-  <h2>Random on Netflix</h2>
-  <ul>
-    <li><a href="/random/netflix/seinfeld">Seinfeld</a></li>
-    <li><a href="/random/netflix/strangerthings">Stranger Things</a></li>
-    <li><a href="/random/netflix/breakingbad">Breaking Bad</a></li>
-    <li><a href="/random/netflix/bettercallsaul">Better Call Saul</a></li>
-    <li><a href="/random/netflix/ozark">Ozark</a></li>
-    <li><a href="/random/netflix/greysanatomy">Grey's Anatomy</a></li>
-    <li><a href="/random/netflix/janethevirgin">Jane the Virgin</a></li>
-  </ul>
-</body>
+        <a class="show" href="/random/netflix/strangerthings">
+          <img src="images/strangerthings.jpeg" alt="Stranger Things Show Poster" class="show-image">
+          <p class="show-title">Stranger Things</p>
+        </a>
 
+        <a class="show" href="/random/netflix/breakingbad">
+          <img src="images/breakingbad.jpeg" alt="Breaking Bad Show Poster" class="show-image">
+          <p class="show-title">Breaking Bad</p>
+        </a>
+
+        <a class="show" href="/random/netflix/bettercallsaul">
+          <img src="images/bettercallsaul.jpeg" alt="Better Call Saul Show Poster" class="show-image">
+          <p class="show-title">Better Call Saul</p>
+        </a>
+
+        <a class="show" href="/random/netflix/ozark">
+          <img src="images/ozark.jpeg" alt="Ozark Show Poster" class="show-image">
+          <p class="show-title">Ozark</p>
+        </a>
+
+        <a class="show" href="/random/netflix/graysanatomy">
+          <img src="images/graysanatomy.jpeg" alt="Grey's Anatomy Show Poster" class="show-image">
+          <p class="show-title">Grey's Anatomy</p>
+        </a>
+
+        <a class="show" href="/random/netflix/janethevirgin">
+          <img src="images/janethevirgin.jpeg" alt="Jane the Virgin Show Poster" class="show-image">
+          <p class="show-title">Jane the Virgin</p>
+        </a>
+      </div>
+    </div>
+  </body>
 </html>
