feat: Add Peacock service and The Office US

--- a/static/index.html
+++ b/static/index.html
@@ -46,5 +46,14 @@
         </a>
       </div>
     </div>
+    <div class="service">
+      <h2>Random on Peacock</h2>
+      <div class="show-list">
+        <a class="show" href="/random/peacock/theofficeus">
+          <img src="images/theofficeus.jpeg" alt="The Office US Show Poster" class="show-image">
+          <p class="show-title">The Office US</p>
+        </a>
+      </div>
+    </div>
   </body>
 </html>
