feat: Add shows - Parks and Recreation - Modern Family - Brooklyn Nine Nine

--- a/static/index.html
+++ b/static/index.html
@@ -53,6 +53,21 @@
           <img src="images/theofficeus.jpeg" alt="The Office US Show Poster" class="show-image">
           <p class="show-title">The Office US</p>
         </a>
+
+        <a class="show" href="/random/peacock/parksandrec">
+          <img src="images/parksandrec.jpeg" alt="Parks and Recreation Show Poster" class="show-image">
+          <p class="show-title">Parks and Recreation</p>
+        </a>
+
+        <a class="show" href="/random/peacock/modernfamily">
+          <img src="images/modernfamily.jpeg" alt="Modern Family Show Poster" class="show-image">
+          <p class="show-title">Modern Family</p>
+        </a>
+
+        <a class="show" href="/random/peacock/brooklynninenine">
+          <img src="images/brooklynninenine.jpeg" alt="Brooklyn Nine Nine Show Poster" class="show-image">
+          <p class="show-title">Brooklyn Nine Nine</p>
+        </a>
       </div>
     </div>
   </body>
